# PCDemo_cpp

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  demo.cpp
docs/: API-Integration-Guide.md  Quick-Start-Guide.md
include/: IAppletManagerV3.h  IBrowsingService.h  ICoreServiceHandler.h  WIUnknown.h
native_sdk/: runtime.z04
scripts/: USAGE.md  build-and-run.bat  build.bat  clean.bat  compress_split.ps1  decompress_split.ps1  run.bat
